--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+  background-color: black;
 }
-
+.overflow-hidden {
+  overflow: hidden !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
